# polytools

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  push_to_github.sh  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
src/polytools/: __init__.py  _decorator.py  _docstring.py  _inspector.py  _schema.py  _types.py
src/polytools/_providers/: __init__.py  _anthropic.py  _gemini.py  _mcp.py  _openai.py
tests/: test_docstring.py  test_providers.py  test_schema.py  test_structured.py
