[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polytools"
version = "0.1.0"
description = "Cross-provider LLM tool schema generation from Python type hints. Zero dependencies."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "LaVon Rutledge", email = "lavonrutledge2@gmail.com" }
]
keywords = [
    "llm", "ai-agents", "tool-calling", "function-calling",
    "openai", "anthropic", "gemini", "mcp", "schema", "type-hints"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []  # Zero external dependencies — pure Python stdlib only

[project.optional-dependencies]
dev = ["pytest", "hatch"]

[project.urls]
Homepage = "https://github.com/lavonrutledge/polytools"
Repository = "https://github.com/lavonrutledge/polytools"
Issues = "https://github.com/lavonrutledge/polytools/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/polytools"]

[tool.hatch.envs.default]
dependencies = ["pytest"]

[tool.hatch.envs.default.scripts]
test = "pytest tests/ -v"
